two service created - getAllUser and CreateUser
